--- a/Frontend/app/src/main/res/values/strings.xml
+++ b/Frontend/app/src/main/res/values/strings.xml
@@ -5,4 +5,6 @@
     <string name="back_arrow_button">Back button from Login screen</string>
     <string name="email">Email</string>
     <string name="password">Password</string>
+    <string name="name">Full name</string>
+    <string name="confirm_password">Confirm Password</string>
 </resources>
