--- a/Frontend/app/src/main/res/values/strings.xml
+++ b/Frontend/app/src/main/res/values/strings.xml
@@ -7,4 +7,5 @@
     <string name="password">Password</string>
     <string name="name">Full name</string>
     <string name="confirm_password">Confirm Password</string>
+    <string name="bottom_bar_action">Bottom bar action</string>
 </resources>
