--- a/Frontend/app/src/main/res/values/strings.xml
+++ b/Frontend/app/src/main/res/values/strings.xml
@@ -8,4 +8,7 @@
     <string name="name">Full name</string>
     <string name="confirm_password">Confirm Password</string>
     <string name="bottom_bar_action">Bottom bar action</string>
+    <string name="sound_notification">Notification sound</string>
+    <string name="enable_sound_notification">Emit sound when new notification arrives.</string>
+    <string name="disable_sound_notification">Turn off notification sound.</string>
 </resources>
