--- a/Frontend/app/src/main/res/values/strings.xml
+++ b/Frontend/app/src/main/res/values/strings.xml
@@ -8,4 +8,5 @@
     <string name="name">Full name</string>
     <string name="confirm_password">Confirm Password</string>
     <string name="bottom_bar_action">Bottom bar action</string>
+    <string name="delete_button">Delete button</string>
 </resources>
