device details finito

--- a/Frontend/app/src/main/res/values/strings.xml
+++ b/Frontend/app/src/main/res/values/strings.xml
@@ -19,4 +19,8 @@
     <string name="delete_rule">Delete rule</string>
     <string name="delete_device">Delete device</string>
     <string name="save_changes">Save changes</string>
+    <string name="device_name">Name</string>
+    <string name="device_unit">Unit</string>
+    <string name="device_last_reading">Last reading</string>
+    <string name="choose_dropdown_item">Choose dropdown item</string>
 </resources>
