--- a/Frontend/app/src/main/res/values/strings.xml
+++ b/Frontend/app/src/main/res/values/strings.xml
@@ -27,4 +27,7 @@
     <string name="start_trigger_level">Start value</string>
     <string name="stop_trigger_level">Stop value</string>
     <string name="no_available_devices">No available devices for creating a rule. Create some device first.</string>
+    <string name="cancel">Cancel</string>
+    <string name="close">Close</string>
+    <string name="save">Save</string>
 </resources>
